fix for web.xml

--- a/assembly/package-res/biserver/tomcat/webapps/pentaho/WEB-INF/web.xml
+++ b/assembly/package-res/biserver/tomcat/webapps/pentaho/WEB-INF/web.xml
@@ -228,7 +228,7 @@
   <!-- END OF ORDER DEPENDENCE -->
 
   <listener>
-    <listener-class>org.springframework.security.ui.session.HttpSessionEventPublisher</listener-class>
+    <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
   </listener>
 
   <listener>
