--- a/repository/ivy.xml
+++ b/repository/ivy.xml
@@ -80,6 +80,7 @@
 		<dependency org="org.springframework.security" name="spring-security-config"   rev="3.2.5.RELEASE" 		 transitive="false"/>
 		<dependency org="org.springframework"          name="spring-web"             rev="4.1.5.RELEASE"         transitive="false"/>
 		<dependency org="org.springframework"          name="spring-webmvc"          rev="4.1.5.RELEASE"         transitive="false"/>
+		<dependency org="org.springframework.webflow"  name="spring-binding"         rev="2.4.1.RELEASE"         transitive="false"/>
 		
 		<dependency org="org.springframework" name="spring-beans" rev="4.1.5.RELEASE" force="true" conf="test->default"/>
     	<dependency org="org.springframework" name="spring-context" rev="4.1.5.RELEASE" force="true" conf="test->default"/>
