--- a/assembly/package-res/biserver/tomcat/webapps/pentaho/WEB-INF/web.xml
+++ b/assembly/package-res/biserver/tomcat/webapps/pentaho/WEB-INF/web.xml
@@ -109,9 +109,9 @@
 
   <filter>
     <filter-name>Spring Security Filter Chain Proxy</filter-name>
-    <filter-class>org.springframework.security.util.FilterToBeanProxy</filter-class>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     <init-param>
-      <param-name>targetBean</param-name>
+      <param-name>targetBeanName</param-name>
       <param-value>filterChainProxy</param-value>
     </init-param>
   </filter>
