[BACKLOG-3264] Update the platform code to use jackrabbit 2.10.0 and resolve resulting errors - created new class PentahoEntry that mimics org.apache.jackrabbit.core.security.authorization.acl.Entry but exposes private constructors - created new inner class PentahoEntries that extends jackrabbit's inner class Entries, but serves a list of PentahoEntry objects - created new class PentahoEntryFilterImpl that extends jackrabbit's EntryFilterImpl, but works for PentahoEntry objects - PentahoCompiledPermissionsImpl now checks the object ( instanceof PentahoEntry or instanceof Entry ) - PentahoEntryCollector kept the same ace gathering logic, mapping the ( now deprecated ) List<AccessControlEntry> to List<PentahoEntry>

--- a/repository/ivy.xml
+++ b/repository/ivy.xml
@@ -66,7 +66,12 @@
 		<dependency org="cglib"             name="cglib"        rev="2.2"    transitive="false"/>
 
 		<!-- begin JCR/Jackrabbit -->
-		<dependency org="org.apache.jackrabbit"    	name="jackrabbit-core"            rev="2.4.5" />
+		<dependency org="org.apache.jackrabbit"    	name="jackrabbit-core"            rev="2.10.0" />
+
+    	<dependency org="org.apache.jackrabbit" name="jackrabbit-data" rev="2.10.0" transitive="false">
+      		<artifact name="jackrabbit-data" type="jar"/>
+    	</dependency>
+
 	    <dependency org="org.springframework"      	name="se-jcr"                     rev="0.9" transitive="false" />
 	    <dependency org="javax.jcr"        			name="jcr"                        rev="2.0"        transitive="false"/>
 	    <dependency org="javax.transaction"        	name="jta"                        rev="1.1"        transitive="false"/>
