--- a/extensions/ivy.xml
+++ b/extensions/ivy.xml
@@ -39,8 +39,10 @@
     <dependency org="org.apache.xmlgraphics" name="batik-dom" rev="1.7" transitive="false"/>
     <dependency org="org.apache.xmlgraphics" name="batik-svggen" rev="1.7" transitive="false"/>
 
-    <dependency org="org.springframework" name="spring" rev="2.5.6" transitive="false"/>
-    <dependency org="org.springframework" name="se-jcr" rev="0.9" transitive="false" />
+    <dependency org="org.springframework"   name="spring-beans"     rev="${dependency.spring.framework.revision}"   transitive="false"/>
+    <dependency org="org.springframework"   name="spring-context"   rev="${dependency.spring.framework.revision}"   transitive="false"/>
+    <dependency org="org.springframework"   name="spring-core"      rev="${dependency.spring.framework.revision}"   transitive="false"/>
+    <dependency org="org.springframework" name="se-jcr" rev="${dependency.spring.extensions.jcr.revision}" transitive="false" />
 
     <dependency org="jfree" name="jcommon" rev="1.0.16"/>
     <dependency org="jfree" name="jfreechart" rev="${dependency.jfreechart.revision}">
@@ -80,8 +82,8 @@
     <dependency org="wsdl4j" name="wsdl4j" rev="1.6.2" transitive="false"/>
     <dependency org="javax.jcr" name="jcr" rev="2.0" transitive="false"/>
     <dependency org="org.apache.geronimo.specs" name="geronimo-stax-api_1.0_spec" rev="1.0" transitive="false"/>
-    <dependency org="org.springframework.security" name="spring-security-core" rev="2.0.5.RELEASE" transitive="false"/>
-    <dependency org="org.springframework.ldap" name="spring-ldap-core" rev="1.3.0.RELEASE" transitive="false"/>
+    <dependency org="org.springframework.security" name="spring-security-core" rev="${dependency.spring.security.revision}" transitive="false"/>
+    <dependency org="org.springframework.ldap" name="spring-ldap-core" rev="${dependency.spring.ldap.revision}" transitive="false"/>
     <dependency org="javax.mail" name="mail" rev="1.4.1" transitive="false"/>
 
 
@@ -120,7 +122,9 @@
 
     <!-- jaxws-spring extension (allows spring configuration of web services); see pentahoServices.spring.xml -->
     <dependency org="org.jvnet.jax-ws-commons.spring" name="jaxws-spring" rev="1.8" transitive="false"/>
-    <dependency org="org.apache.xbean" name="xbean-spring" rev="2.7"/>
+    <dependency org="org.apache.xbean" name="xbean-spring" rev="2.7">
+        <exclude org="org.springframework" name="spring"/>
+    </dependency>
 
     <!-- jersey -->
     <dependency org="com.sun.jersey.contribs" name="jersey-multipart" rev="1.16"/>
@@ -367,7 +371,7 @@
     <dependency org="xmlunit" name="xmlunit" rev="1.6" conf="test->default" />
 
     <!-- Necessary because Pentaho's security tests re-use Spring's Security test classes. -->
-    <dependency org="org.springframework.security" name="spring-security-core-tests" rev="2.0.5.RELEASE"
+    <dependency org="org.springframework.security" name="spring-security-core-tests" rev="${dependency.spring.security.tests.revision}"
                 transitive="false" conf="test->default"/>
     <dependency org="org.apache.directory.server" name="apacheds-core" rev="1.0.2" conf="test->default"/>
     <dependency org="org.apache.directory.server" name="apacheds-server-jndi" rev="1.0.2" conf="test->default">
@@ -381,9 +385,9 @@
                 conf="test->default"/>
     <dependency org="com.sun.jersey.contribs" name="jersey-multipart" rev="1.5" conf="test->default"/>
 
-    <dependency org="org.springframework" name="spring-test" rev="2.5.6" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-test" rev="${dependency.spring.framework.revision}" conf="test->default"/>
 
-    <dependency org="org.springframework" name="spring-mock" rev="2.0.8" conf="test->default">
+    <dependency org="org.springframework" name="spring-mock" rev="${dependency.spring.mock.revision}" conf="test->default">
       <!--
            prevent Spring from grabbing these jars. We are already getting the versions we need in our default
            configuration
