--- a/repository/ivy.xml
+++ b/repository/ivy.xml
@@ -72,19 +72,18 @@
       		<artifact name="jackrabbit-data" type="jar"/>
     	</dependency>
 
-	    <dependency org="org.springframework"      	name="se-jcr"                     rev="0.9" transitive="false" />
+	    <dependency org="org.springframework"      	name="se-jcr" rev="${dependency.spring.extensions.jcr.revision}" transitive="false" />
 	    <dependency org="javax.jcr"        			name="jcr"                        rev="2.0"        transitive="false"/>
 	    <dependency org="javax.transaction"        	name="jta"                        rev="1.1"        transitive="false"/>
 	    <!-- end JCR/Jackrabbit -->
 
-		<dependency org="org.springframework"          name="spring"                 rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework"          name="spring-beans"           rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework"          name="spring-context"         rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework"          name="spring-context-support" rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework"          name="spring-core"            rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework.security" name="spring-security-core"   rev="2.0.5.RELEASE" transitive="false"/>
-		<dependency org="org.springframework"          name="spring-web"             rev="2.5.6"         transitive="false"/>
-		<dependency org="org.springframework"          name="spring-webmvc"          rev="2.5.6"         transitive="false"/>
+		<dependency org="org.springframework"          name="spring-beans"           rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework"          name="spring-context"         rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework"          name="spring-context-support" rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework"          name="spring-core"            rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework"          name="spring-web"             rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework"          name="spring-webmvc"          rev="${dependency.spring.framework.revision}"   transitive="false"/>
+		<dependency org="org.springframework.security" name="spring-security-core"   rev="${dependency.spring.security.revision}"    transitive="false"/>
 
 		<dependency org="aopalliance"              name="aopalliance"                  rev="1.0"        transitive="false"/>
 		<dependency org="concurrent"               name="concurrent"                   rev="1.3.4"      transitive="false"/>
@@ -121,7 +120,7 @@
 		<dependency org="hsqldb"               	name="hsqldb"        rev="1.8.0.7" conf="test->default"/>
 
 
-		<dependency org="org.springframework"  	name="spring-test"   rev="3.2.3.RELEASE"   conf="test->default"/>
+		<dependency org="org.springframework"  	name="spring-test"   rev="${dependency.spring.framework.revision}"   conf="test->default"/>
 
     <dependency org="com.jayway.jsonpath" name="json-path" rev="0.8.1" force="true" conf="test->default"/>
     <dependency org="javax.persistence" name="persistence-api" rev="1.0" force="true" conf="test->default"/>
@@ -131,21 +130,21 @@
     <dependency org="junit" name="junit" rev="4.11" force="true" conf="test->default"/>
     <dependency org="org.aspectj" name="aspectjweaver" rev="1.7.2" force="true" conf="test->default"/>
     <dependency org="org.hamcrest" name="hamcrest-core" rev="1.3" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-beans" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-context" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-core" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-jdbc" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-orm" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-tx" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-web" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-webmvc-portlet" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-beans" 	rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-context" rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-core" 	rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-jdbc" 	rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-orm" 	rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-tx" 		rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-web" 	rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-webmvc-portlet" rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
     <dependency org="org.testng" name="testng" rev="6.5.2" force="true" conf="test->default"/>
     <dependency org="xmlunit" name="xmlunit" rev="1.3" force="true" conf="test->default"/>
     <dependency org="javax.activation" name="activation" rev="1.1" force="true" conf="test->default"/>
     <dependency org="javax.inject" name="javax.inject" rev="1" force="true" conf="test->default"/>
     <dependency org="javax.servlet" name="javax.servlet-api" rev="3.0.1" force="true" conf="test->default"/>
     <dependency org="javax.servlet" name="jstl" rev="1.2" force="true" conf="test->default"/>
-    <dependency org="org.springframework" name="spring-webmvc" rev="3.2.3.RELEASE" force="true" conf="test->default"/>
+    <dependency org="org.springframework" name="spring-webmvc" rev="${dependency.spring.framework.revision}" force="true" conf="test->default"/>
     
     
     
