--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <!-- <module>api</module> -->
     <!-- <module>core</module> -->
     <!-- <module>repository</module> -->
-    <!-- <module>scheduler</module> -->
+    <module>scheduler</module>
     <!-- <module>extensions</module> -->
     <module>build-utils</module>
     <!-- <module>user-console</module> -->
