[BACKLOG-12101] root pom now references pentaho-parent-ce-jar-pom at 7.1-SNAPSHOT build version

--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -12,8 +12,8 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-ce-parent</artifactId>
-	<relativePath>../pom.xml</relativePath>
-    <version>7.1-SNAPSHOT</version>
+	   <relativePath>../pom.xml</relativePath>
+    <version>${project.version}</version>
   </parent>
   
   <artifactId>pentaho-platform-scheduler</artifactId>
