--- a/build-utils/pom.xml
+++ b/build-utils/pom.xml
@@ -8,7 +8,7 @@
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-ce-parent</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>7.1-SNAPSHOT</version>
+    <version>${project.version}</version>
   </parent>
 
   <artifactId>pentaho-platform-build-utils</artifactId>
