--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -36,6 +36,54 @@
     <webservices.version>2.1</webservices.version>
   </properties>
   
+  <build>
+    <plugins>
+	  <plugin>
+	    <artifactId>maven-jar-plugin</artifactId>
+		<executions>
+		  <execution>
+		    <id>default-jar</id>
+			<goals>
+			  <goal>jar</goal>
+			</goals>
+			<phase>package</phase>
+			<configuration>
+			  <archive>
+			    <manifest>
+				  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+				  <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+				</manifest>
+				<manifestEntries>
+				  <Source-Java-Version>${source.jdk.version}</Source-Java-Version>
+				  <Target-Java-Version>${target.jdk.version}</Target-Java-Version>
+				</manifestEntries>
+			  </archive>
+			</configuration>
+		  </execution>
+		  <execution>
+		    <id>test-jar</id>
+			<goals>
+			  <goal>test-jar</goal>
+			</goals>
+			<phase>package</phase>
+			<configuration>
+			  <archive>
+			    <manifest>
+				  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+				  <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+				</manifest>
+				<manifestEntries>
+				  <Source-Java-Version>${source.jdk.version}</Source-Java-Version>
+				  <Target-Java-Version>${target.jdk.version}</Target-Java-Version>
+				</manifestEntries>
+			  </archive>
+			</configuration>
+		  </execution>
+		</executions>
+	  </plugin>
+	</plugins>
+  </build>
+  
   <dependencies>
     <!-- ######################### COMPILE ######################### -->
     <dependency>
