--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
     <!-- Start uncommenting these once they become available -->
     <!-- =================================================== -->
 
-    <!-- <module>api</module> -->
-    <!-- <module>core</module> -->
+    <module>api</module>
+    <module>core</module>
     <!-- <module>repository</module> -->
     <module>scheduler</module>
     <!-- <module>extensions</module> -->
