[BACKLOG-12101] Mavenize platform repository module   - Fixed parent artifactId in repository/pom.xml and       - Added License Header specific properties       - Override and set reuse forks flag to false       - Updated to use the latest platform-core-test dependency       - updated core/pom.xml       - Uncomment the repository module in root pom

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <module>api</module>
     <module>core</module>
-    <!-- <module>repository</module> -->
+    <module>repository</module>
     <module>scheduler</module>
     <!-- <module>extensions</module> -->
     <module>build-utils</module>
