[BACKLOG-12101] Parameterized Java Version in test-jar execution.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -722,8 +722,8 @@
 						      <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						    </manifest>
 						    <manifestEntries>
-						      <Source-Java-Version>1.8</Source-Java-Version>
-						      <Target-Java-Version>1.8</Target-Java-Version>
+						      <Source-Java-Version>${source.jdk.version}</Source-Java-Version>
+						      <Target-Java-Version>${target.jdk.version}</Target-Java-Version>
 						    </manifestEntries>
 						  </archive>
 						</configuration>
