--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,13 +28,8 @@
     <!-- ====================== -->
     <!-- 3RD PARTY DEPENDENCIES -->
     <!-- ====================== -->
-    <commons-logging.version>1.1.3</commons-logging.version>
     <commons-lang.version>2.4</commons-lang.version>
-    <dom4j.version>1.6.1</dom4j.version>
-    <spring-security-core.version>4.1.3.RELEASE</spring-security-core.version>
-    <spring-beans.version>4.3.2.RELEASE</spring-beans.version>
-    <slf4j-api.version>1.7.3</slf4j-api.version>
-    <mockito.version>1.8.5</mockito.version> 	
+    <mockito-all.version>1.8.5</mockito-all.version>
     
     <maven-surefire-plugin.reuseForks>false</maven-surefire-plugin.reuseForks>
   	
@@ -80,7 +75,7 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>${spring-security-core.version}</version>
+      <version>${spring.security.version}</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -92,7 +87,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>${spring-beans.version}</version>
+      <version>${spring.framework.version}</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -171,7 +166,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>${mockito.version}</version>
+      <version>${mockito-all.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
