--- a/build-utils/pom.xml
+++ b/build-utils/pom.xml
@@ -26,12 +26,7 @@
     <!-- ====================== -->
     <!-- 3RD PARTY DEPENDENCIES -->
     <!-- ====================== -->
-
-    <xercesImpl.version>2.9.1</xercesImpl.version>
-    <jersey-server.version>1.19.1</jersey-server.version>
-    <wadl-resourcedoc-doclet.version>1.19.1</wadl-resourcedoc-doclet.version>
-    <junit.version>4.12</junit.version>
-    <mockito.version>1.9.5</mockito.version>
+    <mockito-all.version>1.9.5</mockito-all.version>
 
   </properties>
 
@@ -53,7 +48,7 @@
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>${jersey-server.version}</version>
+      <version>${jersey.version}</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -99,7 +94,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>${mockito.version}</version>
+      <version>${mockito-all.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -164,7 +159,7 @@
             <docletArtifact>
               <groupId>com.sun.jersey</groupId>
               <artifactId>jersey-server</artifactId>
-              <version>${jersey-server.version}</version>
+              <version>${jersey.version}</version>
             </docletArtifact>
             <docletArtifact>
               <groupId>xerces</groupId>
