--- a/core/pom.xml
+++ b/core/pom.xml
@@ -32,52 +32,11 @@
     <!-- ========================== -->
     <!--    DEPENDENCIES VERSION    -->
     <!-- ========================== -->
-		<batik.version>1.7</batik.version>
-		<commons-beanutils.version>1.8.0</commons-beanutils.version>
-		<commons-codec.version>1.9</commons-codec.version>
-		<commons-collections.version>3.2.2</commons-collections.version>
-		<commons-dbcp.version>1.4</commons-dbcp.version>
-		<commons-pool.version>1.5.7</commons-pool.version>
-		<commons-io.version>2.1</commons-io.version>
-		<commons-lang.version>2.4</commons-lang.version>
-		<commons-logging.version>1.1.3</commons-logging.version>
-		<dom4j.version>1.6.1</dom4j.version>
 		<jaxen.version>1.1</jaxen.version>
 		<jcommon.version>1.0.14</jcommon.version>
-		<jfreechart.version>1.0.13</jfreechart.version>
-		
-		<spring-ldap-core.version>2.1.0.RELEASE</spring-ldap-core.version>
-
-		<slf4j-api.version>1.7.3</slf4j-api.version>
-		<slf4j-log4j12.version>1.7.3</slf4j-log4j12.version>
-		<guava.version>17.0</guava.version>
-		<org.apache.felix.main.version>4.2.1</org.apache.felix.main.version>
-		<hibernate-core.version>3.6.9.Final</hibernate-core.version>
-		<hibernate-commons-annotations.version>3.2.0.Final</hibernate-commons-annotations.version>
-		<hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
-		<antlr-complete.version>3.5.2</antlr-complete.version>
-		<asm.version>3.1</asm.version>
-		<asm-attrs.version>2.2.3</asm-attrs.version>
-		<cglib-nodep.version>2.2</cglib-nodep.version>
-		<jta.version>1.1</jta.version>
-		<ehcache-core.version>2.5.1</ehcache-core.version>
 		<js.version>1.7R1</js.version>
-		<jmi.version>200507110943</jmi.version>
-		<mdrapi.version>200507110943</mdrapi.version>
-
-		<pentaho-cwm.version>1.5.4</pentaho-cwm.version>
-
-		<junit.version>4.11</junit.version>
-		<hamcrest-core.version>1.3</hamcrest-core.version>
-		<hamcrest-library.version>1.3</hamcrest-library.version>
-		<bean-matchers.version>0.9</bean-matchers.version>
-		<jmock-junit4.version>2.5.1</jmock-junit4.version>
 		<jmock-legacy.version>2.5.1</jmock-legacy.version>
-		<log4j.version>1.2.17</log4j.version>
-		<spring-mock.version>2.0.8</spring-mock.version>
-		<jettison.version>1.2</jettison.version>
 		<mockito-all.version>1.8.4</mockito-all.version>
-		<jmockit.version>1.8</jmockit.version>
   </properties>
 
 	<dependencies>
@@ -483,7 +442,7 @@
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib-nodep</artifactId>
-			<version>${cglib-nodep.version}</version>
+			<version>${cglib.version}</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -614,6 +573,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
