--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -27,13 +27,7 @@
     <license.header.file>${basedir}/../license/templates/GPL-2.0.txt</license.header.file>
     <license.header.definition.file>${basedir}/../license/styles/javadoc_style_license_header.xml</license.header.definition.file>
 	
-    <jmock.version>2.5.1</jmock.version>
-    <junit.version>4.12</junit.version>
-    <log4j.version>1.2.17</log4j.version>
-    <mail.version>1.4.1</mail.version>
-    <mockito.version>1.9.5</mockito.version>
-    <quartz.version>1.7.2</quartz.version>
-    <webservices.version>2.1</webservices.version>
+	 <mockito-all.version>1.9.5</mockito-all.version>
   </properties>
   
   <build>
@@ -115,7 +109,7 @@
     <dependency>
       <groupId>org.glassfish.metro</groupId>
       <artifactId>webservices-api</artifactId>
-      <version>${webservices.version}</version>
+      <version>${webservices-api.version}</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -128,7 +122,7 @@
     <dependency>
       <groupId>org.glassfish.metro</groupId>
       <artifactId>webservices-rt</artifactId>
-      <version>${webservices.version}</version>
+      <version>${webservices-rt.version}</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -196,7 +190,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
-      <version>${mockito.version}</version>
+      <version>${mockito-all.version}</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
