--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,6 @@
   </scm>
   <properties>
 
-    <!-- ============================= -->
-    <!-- COMMON 3RD PARTY DEPENDENCIES -->
-    <!-- ============================= -->
-
-    <spring.framework.version>4.3.2.RELEASE</spring.framework.version>
-    <spring.security.version>4.1.3.RELEASE</spring.security.version>
-
     <!-- =============== -->
     <!-- LICENSE HEADERS -->
     <!-- =============== -->
@@ -49,8 +42,220 @@
     <license.current.year>2016</license.current.year>
     <license-maven-plugin.version>3.0</license-maven-plugin.version>
     <!-- set to true when we reach a point where all classes have properly applied licenses -->
-    <license.fail.if.missing>false</license.fail.if.missing> 
+    <license.fail.if.missing>false</license.fail.if.missing>
 
+    <!-- ============================= -->
+    <!-- COMMON 3RD PARTY DEPENDENCIES -->
+    <!-- ============================= -->
+
+  <activation.version>1.1</activation.version>
+  <annogen.version>0.1.0</annogen.version>
+  <antlr-complete.version>3.5.2</antlr-complete.version>
+  <aopalliance.version>1.0</aopalliance.version>
+  <apacheds.version>1.5.5</apacheds.version>
+  <artifactId>pentaho-platform-ce-parent</artifactId>
+  <artifactId>pentaho-platform-repository</artifactId>
+  <ascsapjco3wrp.version>20100529</ascsapjco3wrp.version>
+  <asm-attrs.version>2.2.3</asm-attrs.version>
+  <asm.version>3.1</asm.version>
+  <aspectjrt.version>1.6.6</aspectjrt.version>
+  <aspectjweaver.version>1.7.2</aspectjweaver.version>
+  <axiom.version>1.2.8</axiom.version>
+  <axis2.version>1.5</axis2.version>
+  <batik.version>1.7</batik.version>
+  <bcprov-jdk16.version>1.46</bcprov-jdk16.version>
+  <bean-matchers.version>0.9</bean-matchers.version>
+  <castor.version>1.0.5</castor.version>
+  <cglib.version>2.2</cglib.version>
+  <commons-beanutils.version>1.8.0</commons-beanutils.version>
+  <commons-cli.version>1.2</commons-cli.version>
+  <commons-codec.version>1.9</commons-codec.version>
+  <commons-collections.version>3.2.2</commons-collections.version>
+  <commons-dbcp.version>1.4</commons-dbcp.version>
+  <commons-fileupload.version>1.3.2</commons-fileupload.version>
+  <commons-httpclient.version>3.0.1</commons-httpclient.version>
+  <commons-io.version>2.1</commons-io.version>
+  <commons-lang.version>2.6</commons-lang.version>
+  <commons-lang3.version>3.0</commons-lang3.version>
+  <commons-logging.version>1.1.3</commons-logging.version>
+  <commons-pool.version>1.5.7</commons-pool.version>
+  <commons-validator.version>1.3.1</commons-validator.version>
+  <commons-vfs2.version>2.1-20150824</commons-vfs2.version>
+
+  <derby.version>10.2.1.6</derby.version>
+  <dom4j.version>1.6.1</dom4j.version>
+  <drools.version>6.4.0.Final</drools.version>
+  <dumbster.version>1.6.0</dumbster.version>
+  <edtftpj.version>2.1.0</edtftpj.version>
+  <ehcache-core.version>2.5.1</ehcache-core.version>
+  <elasticsearch.version>0.16.3</elasticsearch.version>
+  <enunciate-jersey-rt.version>1.27</enunciate-jersey-rt.version>
+  <esapi.version>2.0.1</esapi.version>
+  <feed4j.version>1.0</feed4j.version>
+
+  <fontbox.version>0.1.0</fontbox.version>
+  <ftp4che.version>0.7.1</ftp4che.version>
+  <gdata-analytics-meta.version>2.1</gdata-analytics-meta.version>
+  <gdata-analytics.version>2.1</gdata-analytics.version>
+  <gdata-client-meta.version>1.0</gdata-client-meta.version>
+  <gdata-client.version>1.41.4</gdata-client.version>
+  <gdata-core.version>1.41.4</gdata-core.version>
+  <georss-rome.version>0.9.8</georss-rome.version>
+  <geronimo-stax-api_1.0_spec.version>1.0</geronimo-stax-api_1.0_spec.version>
+  <grizzly.version>1.9.45</grizzly.version>
+
+  <groovy-all.version>2.4.7</groovy-all.version>
+
+  <guava.version>17.0</guava.version>
+  <gwt-servlet.version>2.5.1</gwt-servlet.version>
+  <h2.version>1.2.131</h2.version>
+  <hamcrest-all.version>1.3</hamcrest-all.version>
+  <hamcrest-core.version>1.3</hamcrest-core.version>
+  <hamcrest-library.version>1.3</hamcrest-library.version>
+  <hibernate-c3p0.version>3.6.9.Final</hibernate-c3p0.version>
+  <hibernate-commons-annotations.version>3.2.0.Final</hibernate-commons-annotations.version>
+  <hibernate-core.version>3.6.9.Final</hibernate-core.version>
+  <hibernate-ehcache.version>3.6.0.Final</hibernate-ehcache.version>
+  <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
+  <hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
+  <hsqldb.version>2.3.2</hsqldb.version>
+  <httpcore.version>4.0-beta3</httpcore.version>
+  <infobright-core.version>3.4</infobright-core.version>
+  <ini4j.version>0.5.1</ini4j.version>
+  <itext-rtf.version>2.1.7</itext-rtf.version>
+  <jackcess.version>1.2.4</jackcess.version>
+  <jackrabbit.version>2.10.0</jackrabbit.version>
+  <jackson.version>1.9.3</jackson.version>
+  <jai_codec.version>1.1.2</jai_codec.version>
+  <jai_core.version>1.1.2</jai_core.version>
+  <janino.version>2.5.16</janino.version>
+  <javadbf.version>20081125</javadbf.version>
+  <javassist.version>3.20.0-GA</javassist.version>
+  <javatar.version>2.5</javatar.version>
+  <javax.inject.version>1</javax.inject.version>
+  <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
+  <jaxb-api.version>2.2.2</jaxb-api.version>
+  <jaxb-impl.version>2.2.3-1</jaxb-impl.version>
+  <jaxen.version>1.1.1</jaxen.version>
+
+  <jaxws-spring.version>1.8</jaxws-spring.version>
+  <jaybird.version>2.1.6</jaybird.version>
+  <jboss-modules.version>1.4.3.Final</jboss-modules.version>
+  <jcifs.version>1.3.3</jcifs.version>
+  <jcl-over-slf4j.version>1.6.1</jcl-over-slf4j.version>
+  <jcommon.version>1.0.16</jcommon.version>
+  <jcr.version>2.0</jcr.version>
+  <jdom.version>1.0</jdom.version>
+  <jempbox.version>0.2.0</jempbox.version>
+  <jersey.version>1.19.1</jersey.version>
+  <jettison.version>1.2</jettison.version>
+  <jetty-webapp.version>8.1.15.v20140411</jetty-webapp.version>
+  <jfreechart.version>1.0.13</jfreechart.version>
+  <jmi.version>200507110943</jmi.version>
+  <jmock.version>2.5.1</jmock.version>
+  <jmockit.version>1.8</jmockit.version>
+  <jmock-junit4.version>2.5.1</jmock-junit4.version>
+  <js.version>1.7R3</js.version>
+  <jsch.version>0.1.46</jsch.version>
+  <jsf-api.version>1.1</jsf-api.version>
+  <json-path.version>0.8.1</json-path.version>
+  <json-simple.version>1.1</json-simple.version>
+  <json-unit.version>1.5.5</json-unit.version>
+  <jsonpath.version>1.0</jsonpath.version>
+  <jsp-api.version>2.1</jsp-api.version>
+  <jsr305.version>1.3.9</jsr305.version>
+  <jsr311-api.version>1.1.1</jsr311-api.version>
+  <jstl.version>1.2</jstl.version>
+  <jt400.version>6.1</jt400.version>
+  <jta.version>1.1</jta.version>
+  <junit.version>4.12</junit.version>
+  <jxl.version>2.6.12</jxl.version>
+  <jzlib.version>1.0.7</jzlib.version>
+
+  <kfs.version>0.3</kfs.version>
+  <knowledge-api.version>6.4.0.Final</knowledge-api.version>
+  <ldapjdk.version>20000524</ldapjdk.version>
+
+  <log4j.version>1.2.17</log4j.version>
+  <lucene-core.version>3.6.0</lucene-core.version>
+  <LucidDbClient-minimal.version>0.9.4</LucidDbClient-minimal.version>
+  <mail.version>1.4.1</mail.version>
+  <maven-failsafe-plugin.reuseForks>false</maven-failsafe-plugin.reuseForks>
+  <maven-surefire-plugin.reuseForks>false</maven-surefire-plugin.reuseForks>
+  <mdrapi.version>200507110943</mdrapi.version>
+  <mimepull.version>1.9.3</mimepull.version>
+  <mina-core.version>2.0.0-M6</mina-core.version>
+  <mockito-all.version>1.10.19</mockito-all.version>
+  <mockito-core.version>1.10.19</mockito-core.version>
+  <mockrunner-servlet.version>0.3.7</mockrunner-servlet.version>
+  <mockrunner.version>0.3.1</mockrunner.version>
+  <modelVersion>4.0.0</modelVersion>
+  <mondrian.version>3.14-SNAPSHOT</mondrian.version>
+  <monetdb-jdbc.version>2.1</monetdb-jdbc.version>
+  <mvel2.version>2.0.10</mvel2.version>
+  <neethi.version>2.0.1</neethi.version>
+  <nekohtml.version>1.9.7</nekohtml.version>
+  <odfdom-java.version>0.8.6</odfdom-java.version>
+  <org.apache.felix.http.version>2.3.0</org.apache.felix.http.version>
+  <org.apache.felix.main.version>4.2.1</org.apache.felix.main.version>
+  <org.apache.karaf.jaas.version>2.4.2</org.apache.karaf.jaas.version>
+  <org.apache.karaf.main.version>3.0.3</org.apache.karaf.main.version>
+  <oro.version>2.0.8</oro.version>
+  <pentaho-concurrent.version>1.0.0</pentaho-concurrent.version>
+  <pentaho-cwm.version>1.5.4</pentaho-cwm.version>
+  <pentaho-vfs.version>1.0</pentaho-vfs.version>
+
+  <persistence-api.version>1.0</persistence-api.version>
+  <poi.version>3.12</poi.version>
+  <portlet-api.version>2.0</portlet-api.version>
+  <postgresql.version>9.3-1102-jdbc4</postgresql.version>
+  <powermock.version>1.6.3</powermock.version>
+  <quartz.version>1.7.2</quartz.version>
+  <rome.version>1.0</rome.version>
+  <salesforce-partner.version>24.0</salesforce-partner.version>
+  <sapdbc.version>7.4.4</sapdbc.version>
+  <saxon.version>9.1.0.8</saxon.version>
+  <scannotation.version>1.0.2</scannotation.version>
+  <se-jcr.version>0.9</se-jcr.version>
+  <secondstring.version>20060615</secondstring.version>
+  <servlet-api.version>2.5</servlet-api.version>
+
+  <shared.version>0.9.15</shared.version>
+
+  <simple-jndi.version>1.0.0</simple-jndi.version>
+  <slf4j-api.version>1.7.3</slf4j-api.version>
+  <slf4j-log4j12.version>1.7.3</slf4j-log4j12.version>
+  <snakeyaml.version>1.7</snakeyaml.version>
+  <snmp4j.version>1.9.3d</snmp4j.version>
+  <spring.framework.version>4.3.2.RELEASE</spring.framework.version>
+  <spring.security.version>4.1.3.RELEASE</spring.security.version>
+  <spring-binding.version>2.4.4.RELEASE</spring-binding.version>
+  <spring-ldap-core.version>2.1.0.RELEASE</spring-ldap-core.version>
+  <spring-mock.version>2.0.8</spring-mock.version>
+  <spring-security-core-tests.version>2.0.5.RELEASE</spring-security-core-tests.version>
+  <sqlite-jdbc.version>3.7.2</sqlite-jdbc.version>
+
+  <stax-api.version>1.0-2</stax-api.version>
+  <syslog4j.version>0.9.34</syslog4j.version>
+  <taglibs-standard-impl.version>1.2.5</taglibs-standard-impl.version>
+  <testng.version>6.5.2</testng.version>
+  <trilead-ssh2.version>build213</trilead-ssh2.version>
+  <urlrewrite.version>3.2.0</urlrewrite.version>
+  <validation-api.version>1.0.0.GA</validation-api.version>
+
+  <wadl-resourcedoc-doclet.version>1.19.1</wadl-resourcedoc-doclet.version>
+  <webservices-api.version>2.1</webservices-api.version>
+  <webservices-rt.version>2.1</webservices-rt.version>
+  <wsdl4j.version>1.6.2</wsdl4j.version>
+  <wstx-asl.version>3.2.4</wstx-asl.version>
+  <xbean-spring.version>2.7</xbean-spring.version>
+  <xercesImpl.version>2.9.1</xercesImpl.version>
+  <xml-apis.version>1.3.04</xml-apis.version>
+  <xmlbeans.version>2.6.0</xmlbeans.version>
+  <xmlenc.version>0.52</xmlenc.version>
+  <XmlSchema.version>1.4.2</XmlSchema.version>
+  <xmlunit.version>1.6</xmlunit.version>
+  <xstream.version>1.4.9</xstream.version>
   </properties>
 
   <build>
@@ -106,5 +311,4 @@
     </plugins>
 
   </build>  
-  
 </project>
