[BACKLOG-12101] add pentaho-vfs to test scope

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -2833,6 +2833,11 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.pentaho</groupId>
+            <artifactId>pentaho-vfs</artifactId>
+            <version>${pentaho-vfs.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
