[BACKLOG-12101] fixed unit tests that failed on OSX; added user-console module to root pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <module>scheduler</module>
     <module>extensions</module>
     <module>build-utils</module>
-    <!-- <module>user-console</module> -->
+    <module>user-console</module>
     <!-- <module>assembly</module> -->
 
   </modules>
