--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,34 @@
   <XmlSchema.version>1.4.2</XmlSchema.version>
   <xmlunit.version>1.6</xmlunit.version>
   <xstream.version>1.4.9</xstream.version>
+
+    <!-- ===================== -->
+    <!-- ASSEMBLY DEPENDENCIES -->
+    <!-- ===================== -->
+  <axis.version>1.4</axis.version>
+  <bsf.version>2.4.0</bsf.version>
+  <bsh.version>1.3.0</bsh.version>
+  <commons-digester.version>1.8</commons-digester.version>
+  <commons-discovery.version>0.4</commons-discovery.version>
+  <commons-jxpath.version>1.2</commons-jxpath.version>
+  <commons-math.version>1.1</commons-math.version>
+  <icu4j.version>54.1.1</icu4j.version>
+  <jakarta-regexp.version>1.2</jakarta-regexp.version>
+  <jaxrpc-api.version>1.1</jaxrpc-api.version>
+  <jcommon-logging-log4jlog.version>1.0.2</jcommon-logging-log4jlog.version>
+  <joda-time.version>1.6</joda-time.version>
+  <mdrjdbc.version>1.4.2</mdrjdbc.version>
+  <mysql-connector-java.version>5.1.17</mysql-connector-java.version>
+  <ognl.version>2.6.9</ognl.version>
+  <org.apache.felix.fileinstall.version>3.4.2</org.apache.felix.fileinstall.version>
+  <org.apache.felix.framework.version>4.4.1</org.apache.felix.framework.version>
+  <org.apache.karaf.management.boot.version>3.0.3</org.apache.karaf.management.boot.version>
+  <org.osgi.compendium.version>5.0.0</org.osgi.compendium.version>
+  <quartz-oracle.version>1.7.2</quartz-oracle.version>
+  <soap.version>2.3</soap.version>
+  <webservices.version>2.1</webservices.version>
+  <weka.version>3.8.0.1</weka.version>
+  <xalan.version>2.7.1</xalan.version>
   </properties>
 
   <build>
